--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./scss/custom.scss">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         <link rel="stylesheet" href="./node_modules/@fancyapps/ui/dist/fancybox.css">
+        <link rel="icon" type="image/png" href="/assets/Isotipo--300.png">
         <title>ROD Consulting - Ingeniería Eléctrica, Diseño, Construcción y Consultoría</title>
     </head>
     <body>
