Feature: lazy loading for images

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>
                     <div class="row justify-content-between align-items-center">
                         <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-                            <img class="about-image" src="./assets/img/about.jpg" alt="A picture About us">
+                            <img class="about-image" src="./assets/img/about.jpg" loading="lazy" alt="A picture About us">
                         </div>
                         <div class="col-lg-5" data-aos="fade-down" data-aos-delay="100">
                             <div class="d-flex pt-4 mb-3">
@@ -295,7 +295,7 @@
                         <div class="col-md-4" data-aos="fade-down" data-aos-delay="100">
                             <div class="portfolio-item image-zoom">
                                 <div class="image-zoom-wrapper">
-                                    <img src="./assets/img/project-1.jpg" alt="">
+                                    <img src="./assets/img/project-1.jpg" loading="lazy" alt="">
                                 </div>
                                 <a href="./assets/project-1.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
@@ -303,7 +303,7 @@
                             </div>
                             <div class="portfolio-item image-zoom mt-4">
                                 <div class="image-zoom-wrapper">
-                                    <img src="./assets/img/project-2.jpg" alt="">
+                                    <img src="./assets/img/project-2.jpg" loading="lazy" alt="">
                                 </div>
                                 <a href="./assets/project-2.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
@@ -313,7 +313,7 @@
                         <div class="col-md-4" data-aos="fade-down" data-aos-delay="100">
                             <div class="portfolio-item image-zoom">
                                 <div class="image-zoom-wrapper">
-                                    <img src="./assets/img/project-3.jpg" alt="">
+                                    <img src="./assets/img/project-3.jpg" loading="lazy" alt="">
                                 </div>
                                 <a href="./assets/project-3.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
@@ -321,7 +321,7 @@
                             </div>
                             <div class="portfolio-item image-zoom mt-4">
                                 <div class="image-zoom-wrapper">
-                                    <img src="./assets/img/project-4.jpg" alt="">
+                                    <img src="./assets/img/project-4.jpg" loading="lazy" alt="">
                                 </div>
                                 <a href="./assets/project-4.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
@@ -331,7 +331,7 @@
                         <div class="col-md-4" data-aos="fade-down" data-aos-delay="100">
                             <div class="portfolio-item image-zoom">
                                 <div class="image-zoom-wrapper">
-                                    <img src="./assets/img/project-5.jpg" alt="">
+                                    <img src="./assets/img/project-5.jpg" loading="lazy" alt="">
                                 </div>
                                 <a href="./assets/project-5.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
@@ -339,7 +339,7 @@
                             </div>
                             <div class="portfolio-item image-zoom mt-4">
                                 <div class="image-zoom-wrapper">
-                                    <img src="./assets/img/project-6.jpg" alt="">
+                                    <img src="./assets/img/project-6.jpg" loading="lazy" alt="">
                                 </div>
                                 <a href="./assets/project-6.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
