--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
-        <link rel="stylesheet" href="./scss/custom.scss">
+        <link rel="stylesheet" href="./src/scss/custom.scss">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         <link rel="stylesheet" href="./node_modules/@fancyapps/ui/dist/fancybox.css">
         <link rel="icon" type="image/png" href="/assets/Isotipo--300.png">
