Feature: basic intersection observer for whatsApp button

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 </div>
             </section>
             <!-- WHATSAPP BUTTOM -->
-            <div class="whatsapp">
+            <div id="whatsAppButtom" class="whatsAppButtom">
                 <a href="https://wa.link/rftxys" target=”_blank”>
                     <svg
                         width="64px"
